Fixed the subscribe link that was overlapping the links ontop of it as requested by the TSE

--- a/css/style.css
+++ b/css/style.css
@@ -177,14 +177,13 @@ nav,
   .ft-top-1 {
     display: flex;
     flex-direction: column;
-    height: 150px;
+    height: 158px;
     width: 100%;
   }
 
   .ft-1-img {
     align-self: center;
     justify-self: center;
-    padding-top: 0;
   }
 
   .ft-mb-2 {
